--- a/u19028386_HW06/Views/products/Index.cshtml
+++ b/u19028386_HW06/Views/products/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Products</h2>
 
 <p>
     @using (Html.BeginForm("Search", "products", FormMethod.Post, new { style = "width:40%" }))
@@ -15,6 +15,8 @@
 
     }
     @Html.ActionLink("Create New", "Create")
+    <button class="btn btn-primary" onclick="location.href='@Html.ActionLink("Create New", "Create")'"></button>
+   
 </p>
 <table class="table">
     <tr>
