--- a/u19028386_HW06/Views/products/Index.cshtml
+++ b/u19028386_HW06/Views/products/Index.cshtml
@@ -1,10 +1,13 @@
-﻿@model IEnumerable<u19028386_HW06.Models.product>
+﻿@model IPagedList<u19028386_HW06.Models.product>
 
 @{
     ViewBag.Title = "Index";
 }
 
 <h2>Products</h2>
+
+@using PagedList.Mvc;
+@using PagedList;
 
 <p>
     @using (Html.BeginForm("Search", "products", FormMethod.Post, new { style = "width:40%" }))
@@ -14,53 +17,56 @@
         <button type="submit" class="btn btn-primary">Search</button>
 
     }
-    @Html.ActionLink("Create New", "Create")
-    <button class="btn btn-primary" onclick="location.href='@Html.ActionLink("Create New", "Create")'"></button>
-   
+
+    <button class="btn btn-lg btn-primary" onclick="location.href='@Url.Action("Create", "products")'">hhhh</button>
+
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.product_name)
+            @Html.DisplayNameFor(model => model.First().product_name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.model_year)
+            @Html.DisplayNameFor(model => model.First().model_year)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.list_price)
+            @Html.DisplayNameFor(model => model.First().list_price)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.brand.brand_name)
+            @Html.DisplayNameFor(model => model.First().brand.brand_name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.category.category_name)
+            @Html.DisplayNameFor(model => model.First().category.category_name)
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.product_name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.model_year)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.list_price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.brand.brand_name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.category.category_name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.product_id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.product_id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.product_id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.product_name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.model_year)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.list_price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.brand.brand_name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.category.category_name)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.product_id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.product_id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.product_id })
+            </td>
+        </tr>
+    }
 
 </table>
+
+@Html.PagedListPager(Model,i=>Url.Action("Index","products", new { i, search = Request.QueryString["search"] }))
